# garmin-to-notion

./: .example.env  .gitignore  README.md  README_AUTH_SETUP.md  garmin_session.py  pyproject.toml  weight-tracker
.claude/: settings.local.json
.github/workflows/: sync_garmin_to_notion.yml
scripts/: generate-garmin-token.py
src/helpers/: _get_garmin_client.py
src/workflows/: sleep-data.py
