[project]
name = "garmin-to-notion"
version = "0.1.0"
description = "Sync your Garmin Connect health data to Notion automatically via GitHub Actions."
requires-python = ">=3.13"
dependencies = [
    "garminconnect>=0.3.3",
    "notion-client==2.2.1",
    "python-dotenv>=1.2.2",
    "pytz==2024.1",
]
